upgrades dep and fixes Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ install:
   - make gbuild
 
 before_script:
-  - sudo apt-get update && apt-get install -y curl && curl --silent https://bootstrap.pypa.io/get-pip.py | python3 && pip install --upgrade httpie
-  - sudo apt-get install jq
+  - pip install --upgrade httpie
+  - apt-get install jq
   - cd testbed
 
 script:
