fixes Dockerfile and working towards #9

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,8 @@ LABEL version=$rversion \
 
 COPY ui/* /app/ui/
 WORKDIR /app
+RUN chown -R 1001:1 /app
+USER 1001
 ## for online development, uncomment the following 2 lines:
 RUN curl -s -L 'https://github.com/mhausenblas/reshifter/releases/download/v'$rversion'-alpha/reshifter' -o reshifter && \
     chmod +x reshifter
@@ -13,5 +15,4 @@ RUN curl -s -L 'https://github.com/mhausenblas/reshifter/releases/download/v'$rv
 # COPY reshifter .
 # RUN chmod +x reshifter
 EXPOSE 8080
-USER 1001
 CMD ["/app/reshifter"]
