--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 RUN chown -R 1001:1 /app
 USER 1001
 ## for online development, uncomment the following 2 lines:
-RUN curl -s -L 'https://github.com/mhausenblas/reshifter/releases/download/v'$rversion'-alpha/reshifter' -o reshifter && \
+RUN curl -sf -L 'https://github.com/mhausenblas/reshifter/releases/download/v'$rversion'-alpha/reshifter' -o reshifter && \
     chmod +x reshifter
 ## for pure offline development, uncoment the following 2 lines:
 # COPY reshifter .
