--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,11 +1,47 @@
 [[constraint]]
   name = "github.com/Sirupsen/logrus"
-  version = "1.0.0"
+  version = "1.2.0"
 
 [[constraint]]
   name = "github.com/gorilla/mux"
-  version = "1.4.0"
+  version = "1.6.2"
 
 [[constraint]]
   name = "github.com/minio/minio-go"
-  version = "2.1.0"
+  version = "3.0.0"
+
+[[constraint]]
+  name = "github.com/mitchellh/go-homedir"
+  version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/pierrre/archivefile"
+
+[[constraint]]
+  name = "github.com/prometheus/client_golang"
+  version = "0.9.1"
+
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.3"
+
+[[constraint]]
+  name = "github.com/spf13/viper"
+  version = "1.3.0"
+
+[[constraint]]
+  name = "go.etcd.io/etcd"
+  version = "3.3.10"
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/net"
+
+[[constraint]]
+  name = "google.golang.org/grpc"
+  version = "1.17.0"
+
+[prune]
+  go-tests = true
+  unused-packages = true
